[package]
name = "svg-gcode-converter-and-sender-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcode-serial = "0.1.4"
grbli = "0.1.0"
gtk4 = { version = "0.7.3", features = ["v4_8", "v4_12"] }
roxmltree = "0.18.1"
serialport = "4.2.2"
svg2gcode = "0.1.3"
